syntax = "proto3";

package restaurant.v1;

message ListRestaurantsRequest {
  bool open_only = 1;
}

message Restaurant {
  string id = 1;
  string name = 2;
  string status = 3;
}

message ListRestaurantsResponse {
  repeated Restaurant items = 1;
}

message GetMenuRequest {
  string restaurant_id = 1;
}

message MenuItem {
  string id = 1;
  string name = 2;
  double price = 3;
}

message GetMenuResponse {
  repeated MenuItem items = 1;
}

service RestaurantService {
  rpc ListRestaurants(ListRestaurantsRequest) returns (ListRestaurantsResponse);
  rpc GetMenu(GetMenuRequest) returns (GetMenuResponse);
}
